# Set-RLGym

./: .gitignore  AGENTS.md  README.md  ToDo.md  pyproject.toml
Set/: agent.py  env.py  inference.py  run.py  type.py
Set/Utils/: generate_board.py
Set/templates/: system_prompt_template.j2
Specs/: env.txt  types.txt
